--- a/project.css
+++ b/project.css
@@ -232,7 +232,7 @@ body.light-mode .imgLogoCienfuegos{
     display: flex;
     justify-content: flex-end;
     margin-right: 280px;
-    margin-top: 55px;
+    margin-top: 45px;
 }
 
 .flecheCatalattitude {
@@ -511,7 +511,7 @@ body.light-mode .imgLogoCienfuegos{
     margin-left: auto;
     margin-right: auto;
     width: 500px;
-    padding-bottom: 100px;
+
 }
 
 .titlePublication{
@@ -532,7 +532,7 @@ body.light-mode .imgLogoCienfuegos{
 
 .creaGrid {
     width: 300px;
-    height: auto;
+    height: 480px;
     object-fit: cover;
     border-radius: 8px;
 }
@@ -592,10 +592,6 @@ body.light-mode .imgLogoCienfuegos{
     padding-top: 50px;
 }
 
-.hidden {
-    display: none;
-    pointer-events: none;
-}
 
 /* Conteneur du bouton son */
 .boutonSon {
@@ -768,7 +764,7 @@ body.light-mode .imgLogoCienfuegos{
     align-items: center;
     justify-content: center;
     max-width: 1200px;
-    margin: 40px auto 100px;
+    margin:  0 auto 100px;
     padding: 0 20px;
 }
 
@@ -836,7 +832,6 @@ body.light-mode .imgLogoCienfuegos{
         flex-direction: row;
         gap: 80px;
         align-items: center;
-        padding-top: 50px;
     }
 
     .videoDetailSection {
@@ -927,13 +922,8 @@ body.light-mode .arrow {
     font-family: 'Oswald', sans-serif;
     font-size: 50px;
     text-align: center;
-    margin-bottom: 25px;
     margin-top: 150px;
     color: #a91f32;
-}
-
-.instagram-media {
-
 }
 
 .titreInsta {
@@ -942,6 +932,14 @@ body.light-mode .arrow {
     text-align: center;
     margin-bottom: 50px;
     font-weight: lighter;
+
+}
+
+.titreIdentite {
+    font-family: 'holiday', cursive;
+    font-size: 32px;
+    font-weight: lighter;
+    margin-top: 100px;
 }
 
 .imgCarteCadeauCatalattitude{
@@ -954,7 +952,7 @@ body.light-mode .arrow {
 .carteCadeauCatalattitude{
     display: flex;
     justify-content: center;
-    padding-top: 250px;
+    padding-top: 50px;
     gap : 150px;
 }
 
@@ -996,7 +994,7 @@ BODY.light-mode .flecheCadeau {
 
 .ordietgridCatalattitude {
     display: flex;
-    margin-top: 150px;
+    margin-top: 100px;
 }
 
 @media (min-width: 1700px) {
@@ -1135,3 +1133,6 @@ BODY.light-mode .flecheCadeau {
     font-family: 'Oswald', sans-serif;
     margin-top: 5px;
 }
+
+
+
