--- a/project.css
+++ b/project.css
@@ -532,6 +532,7 @@ body.light-mode .imgLogoCienfuegos{
     font-weight: 500;
     text-align: center;
     margin-bottom: 50px;
+    margin-top: 50px;
 }
 .imgGrid{
     display: flex;
