--- a/project.css
+++ b/project.css
@@ -776,18 +776,10 @@ body.light-mode .imgLogoCienfuegos{
     align-items: center;
     justify-content: center;
     max-width: 1200px;
-    margin:  0 auto 100px;
+    margin: 80px auto 100px;
     padding: 0 20px;
 }
-.mainVideoWrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    max-width: 1200px;
-    margin:  0 auto 100px;
-    padding: 0 20px;
-}
+
 
 /* Conteneur de la vidéo format Portrait */
 .fullVideoContainer {
@@ -1141,6 +1133,7 @@ BODY.light-mode .flecheCadeau {
     text-align: center;
     font-family: 'Oswald', sans-serif;
     margin-bottom: 50px;
+
 }
 
 .gridMerch{
@@ -1185,18 +1178,23 @@ BODY.light-mode .flecheCadeau {
 .FlecheTextGauche {
     display: flex;
     align-items: center;
+    margin-top: 245px;
+    width: 269px;
+    justify-content: flex-end;
 }
 
 .FlecheTextDroite {
     display: flex;
     align-items: center;
+    margin-top: 440px;
 }
 
 .petiteFlecheDroite {
     transform: scale(0.5) rotate(122deg) rotateY(180deg) translate(206px, -49px);
 }
 .textOrdiClick {
-    width: 140px;
+    width: 275px;
+    text-align: center;
 }
 
 
@@ -1239,6 +1237,7 @@ BODY.light-mode .flecheCadeau {
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
+    margin-top: 50px;
 }
 .roue {
     width: 235px;
@@ -1260,6 +1259,10 @@ BODY.light-mode .flecheCadeau {
     filter: invert(1);
 }
 
+
+body.light-mode .FlecheRoue {
+    filter: invert(0);
+}
 .textRoue {
     font-family: 'holiday', cursive;
     font-size: 22px;
