--- a/project.css
+++ b/project.css
@@ -388,6 +388,13 @@ h1 {
     height: 100px;
     width: 100px;
 }
+.colorRouge4 {
+    background-color: #c51a2e;
+    border-radius: 100%;
+    height: 100px;
+    width: 100px;
+}
+
 
 .colorOrange {
     background-color: #d5bf86;
@@ -1097,7 +1104,7 @@ h1 {
 }
 
 .imageAprendreoualaisser {
-    height: 309px;
+    height: 310px;
     position: relative;
     top: 38px;
     width: 551px;
