--- a/project.css
+++ b/project.css
@@ -1074,10 +1074,11 @@ h1 {
 .descriptionCalendrier {
     font-family: 'Oswald', sans-serif;
     font-size: 18px;
-    margin: auto 0;
+    margin: 30px 0;
     max-width: 300px;
     text-align: center;
     width: 300px;
+
 }
 
 /* -------------------------------------------
@@ -1090,7 +1091,7 @@ h1 {
 }
 
 .lienOrdiCatalattitude {
-    margin-left: 300px;
+    margin-left: 90px;
 }
 
 
@@ -1103,7 +1104,7 @@ h1 {
 
 .imageOrdiCatalattitude {
     display: block;
-    margin-top: 143px;
+    margin-top: 112px;
     position: absolute;
     width: 600px;
 }
@@ -1146,7 +1147,8 @@ h1 {
     font-family: 'Oswald', sans-serif;
     font-size: 18px;
     text-align: center;
-    width: 500px;
+    width: 507px;
+    margin-bottom: 20px;
 }
 
 .texteOrdi2 {
@@ -1830,7 +1832,9 @@ body.light-mode .concept-arrow {
 }
 
 
-
+.hidden{
+    display: none;
+}
 
 .avion-container {
     display: flex;
